deployment/prometheus/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: http
    spec:
      serviceAccountName: prometheus
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsUser: 10001
        runAsNonRoot: true
      containers:
        - name: prometheus
          image: docker.io/prom/prometheus:v3.4.1
          imagePullPolicy: IfNotPresent
          args:
            - '--storage.tsdb.retention.time=15d'
            - '--config.file=/etc/prometheus/prometheus.yml'
            - '--storage.tsdb.path=/prometheus/data/'
            - '--web.console.libraries=/etc/prometheus/console_libraries'
            - '--web.console.templates=/etc/prometheus/consoles'
            - '--enable-feature=concurrent-rule-eval,promql-experimental-functions,exemplar-storage,promql-per-step-stats,native-histograms'
            - '--web.enable-remote-write-receiver'
            - '--web.enable-otlp-receiver'
            - '--web.enable-lifecycle'
            - '--log.level=warn'
            - '--log.format=json'
            - '--no-auto-gomaxprocs'
            - '--no-auto-gomemlimit'
          ports:
            - containerPort: 9090
              name: http
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
            - name: config-volume
              mountPath: /etc/config/alerting_rules.yml
              subPath: alerting_rules.yml
            - name: data-volume
              mountPath: /prometheus/data
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config-volume
          configMap:
            name: prometheus
        - name: data-volume
          persistentVolumeClaim:
            claimName: prometheus
